--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -476,6 +476,7 @@
                                                 });
                                             }
                                         } else {
+                                            console.log("response",response)
                                             if (response.data.successs)
                                                 Swal.fire({
                                                     icon: 'success',
