--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -91,11 +91,17 @@
                                                                 data-bs-toggle="modal"
                                                                 data-bs-target="#quickViewModal"><i
                                                                     class="fi-rs-eye"></i></a>
-                                                            <a aria-label="Add To Wishlist" class="action-btn hover-up"
-                                                                onclick="addToWishList('<%= products[i]._id %>')"><i
-                                                                    class="fi-rs-heart"></i></a>
+                                                                    <% if (userWishlist.some(item => item.productId.equals(products[i]._id))) { %>
+                                                                        <a aria-label="Add To Wishlist" class="action-btn" style="background-color: red;"
+                                                                            onclick="addToWishList('<%= products[i]._id %>')"><i
+                                                                                class="fi-rs-heart"></i></a>
+                                                                    <% } else { %>
+                                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up"
+                                                                            onclick="addToWishList('<%= products[i]._id %>')"><i
+                                                                                class="fi-rs-heart"></i></a>
+                                                                    <% } %>
                                                             <a aria-label="Compare" class="action-btn hover-up"
-                                                                href="shop-compare.html"><i
+                                                                href="#"><i
                                                                     class="fi-rs-shuffle"></i></a>
                                                         </div>
                                                         <div
@@ -390,6 +396,9 @@
                                             title: 'Success!',
                                             text: data.message,
                                         });
+                                        setTimeout(() => {
+                                            location.reload();
+                                        }, 3000);
 
                                     } else {
                                         // Handle errors
