--- a/views/admin/listCoupon.ejs
+++ b/views/admin/listCoupon.ejs
@@ -134,7 +134,7 @@
                                 <th>#</th>
                                 <th>Coupon Name</th>
                                 <th>Coupon Code</th>
-                                <th>Discount</th>
+                                <th>Discount Amount</th>
                                 <th>Expiry Date</th>
                                 <th>Criteria Amount</th>
                                 <th>Action</th>
@@ -154,7 +154,7 @@
                                         <%= coupon.couponCode %>
                                     </td>
                                     <td>
-                                        <%= coupon.discount %>
+                                        <%= coupon.discountAmount %>
                                     </td>
                                     <td>
                                         <%= coupon.expiryDate.toDateString() %>
@@ -206,10 +206,10 @@
                                                     <small id="editCouponCode-error" class="text-danger"></small>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="editDiscount">Discount</label>
-                                                    <input type="number" class="form-control" id="editDiscount"
-                                                        name="discount" value="<%=  coupon.discount %>">
-                                                    <small id="editDiscount-error" class="text-danger"></small>
+                                                    <label for="editDiscountAmount">Discount Amount</label>
+                                                    <input type="number" class="form-control" id="editDiscountAmount"
+                                                        name="discount" value="<%=  coupon.discountAmount %>">
+                                                    <small id="editDiscountAmount-error" class="text-danger"></small>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="editExpiryDate">Expiry Date</label>
@@ -222,15 +222,16 @@
                                                 <div class="form-group">
                                                     <label for="editCriteriaAmount">Criteria Amount</label>
                                                     <input type="number" class="form-control" id="editCriteriaAmount"
-                                                        name="criteriaAmount" value="<%=  coupon.criteriaAmount %>">
+                                                        name="criteriaAmount" value="<%= coupon.criteriaAmount %>">
                                                     <small id="editCriteriaAmount-error" class="text-danger"></small>
                                                 </div>
                                                 <br>
                                                 <button type="submit" class="btn btn-primary"
                                                     style="display: block; margin: 0 auto;" id="updateCoupon">Save
                                                     changes</button>
-                                                    <br>
-                                                <div class="error-message" id="form-errors" style="text-align: center;"></div>
+                                                <br>
+                                                <div class="error-message" id="form-errors" style="text-align: center;">
+                                                </div>
 
                                             </form>
                                         </div>
@@ -311,7 +312,7 @@
                         // Validation
                         const editCouponName = $(this).find('#editCouponName').val().trim();
                         const editCouponCode = $(this).find('#editCouponCode').val().trim();
-                        const editDiscount = $(this).find('#editDiscount').val().trim();
+                        const editDiscountAmount = $(this).find('#editDiscountAmount').val().trim();
                         const editExpiryDate = $(this).find('#editExpiryDate').val().trim();
                         const editCriteriaAmount = $(this).find('#editCriteriaAmount').val().trim();
 
@@ -322,8 +323,8 @@
                             isValid = false;
                         }
 
-                        if (editDiscount === '') {
-                            $(this).find('#editDiscount-error').text('Please enter the coupon discount.');
+                        if (editDiscountAmount === '') {
+                            $(this).find('#editDiscountAmount-error').text('Please enter the coupon discount amount.');
                             isValid = false;
                         }
 
@@ -339,12 +340,12 @@
                             $(this).find('#editCouponCode-error').text('Please enter a valid 6-character coupon code.');
                             isValid = false;
                         }
-                        if (parseFloat(editDiscount) < 1) {
-                            $(this).find('#editDiscount-error').text('Discount must be greater than or equal to 1.');
+                        if (parseFloat(editDiscountAmount) < 1) {
+                            $(this).find('#editDiscountAmount-error').text('Discount amount must be greater than or equal to 1.');
                             isValid = false;
                         }
-                        if (parseFloat(editDiscount) > 99) {
-                            $(this).find('#editDiscount-error').text('Discount must be lesser than or equal to 99.');
+                        if (parseFloat(editDiscountAmount) >= parseFloat(editCriteriaAmount)) {
+                            $(this).find('#editDiscountAmount-error').text('Discount amount must be less than Criteria amount.');
                             isValid = false;
                         }
                         if (parseFloat(editCriteriaAmount) < 1) {
@@ -367,7 +368,7 @@
                         const formData = {
                             couponName: editCouponName,
                             couponCode: editCouponCode,
-                            discount: parseFloat(editDiscount),
+                            discountAmount: parseFloat(editDiscountAmount),
                             expiryDate: editExpiryDate,
                             criteriaAmount: parseFloat(editCriteriaAmount)
                         };
@@ -399,7 +400,7 @@
                                         location.reload();
                                     }, 2000);
 
-                                } 
+                                }
                             })
                             .catch(err => {
                                 if (err.response && err.response.data && !err.response.data.success) {
@@ -413,6 +414,6 @@
 
                     });
                 });
-            
-            
+
+
             </script>
