--- a/views/admin/listOffer.ejs
+++ b/views/admin/listOffer.ejs
@@ -130,7 +130,7 @@
                                 <th>Offer Name</th>
                                 <th>Starting Date</th>
                                 <th>Ending Date</th>
-                                <th>Discount</th>
+                                <th>Discount (%)</th>
                                 <th>Action</th>
 
                             </tr>
@@ -152,7 +152,7 @@
 
                                     </td>
                                     <td>
-                                        <%= offer.discount %>
+                                        <%= offer.discount %> %
 
                                     </td>
 
