--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -79,7 +79,7 @@
                                                                         </div>
                                                                         <div class="form-group ">
                                                                             <button class="btn btn-primary btn-sm"><i
-                                                                                    class="fi-rs-label "></i>Apply</button>
+                                                                                    class="fi-rs-label "></i>Select Coupon</button>
                                                                         </div>
                                                                     </div>
                                                                 </form>
